<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Infozimo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tags">Tags</string>
    <string name="user_pic">User Pic</string>
    <string name="info_pic">Info Pic</string>
    <string name="info">Info</string>
    <string name="tags">Tags</string>
    <string name="myTags">My Tags</string>
    <string name="shareInfo">Share Info</string>
    <string name="share">Share</string>
    <string name="likeInfo">Like Info</string>
    <string name="post">Post</string>
    <string name="postImage">Post Image</string>
    <string name="choosePic">Choose Picture</string>
    <string name="selectedTag">Selected Tag : </string>
    <string name="loading">Loading</string>
    <string name="coverPic">Cover Pic</string>
    <string name="hide">Hide</string>
    <string name="deleteInfo">Delete Info</string>
    <string name="facebook_app_id">140499646300107</string>
    
    <string name="howToCash">This Application compiles complex algorithm that verifies how you use infozimo and how long you use it. \n
        - Viewing 3 posts will give you 1 Point \n
        - Posting 1 info. will give you 4 Points \n
        Once you got 1000 Points, You are all set to Redeem your points. \n
        Redeemed Points will be given to you as PayTM Cash. \n
        Note: Points and PayTM cash are totally Different. \n
        For Example: You may Redeem 1350 Points and get Rs.450 or even Rs.37 \n
        It Totally Depends on the algorithm works behind the application. \n
        Try to click on Ads to get Solid Points that surely counts on Cash</string>
    
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
     
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Profile</item>
        <item >Tags</item>
        <item >Post</item>
        <item >More Apps From Developer</item>
        <item >How Can I get PayTM Cash</item>
        <item >Logout</item>
        <!-- <item >What\'s Hot</item> -->
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_profile</item>
        <item>@drawable/ic_tag</item>
        <item>@drawable/ic_post</item>
        <item>@drawable/ic_more</item>
        <item>@drawable/ic_coin</item>
        <item>@drawable/ic_logout</item>
        <!-- <item>@drawable/ic_whats_hot</item> -->
    </array>
     
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>
