<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ActivityStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layoutCover"
        android:layout_width="match_parent"
        android:layout_height="240dp" >
        
        <ImageView
            android:id="@+id/ivCoverPic"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/coverPic"
            android:scaleType="fitXY" />
        
        <Button 
            android:id="@+id/btnCoverHide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:padding="@dimen/padding_small"
            android:layout_margin="@dimen/padding_large"
            android:background="@drawable/button"
            android:text="@string/hide"
            android:textColor="@android:color/white"
            android:textSize="12sp"/>

        <ImageView
            android:id="@+id/ivProfPicProfile"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/user_pic" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:padding="@dimen/padding_small"
            android:textColor="@color/infozimo_orange"
            android:textSize="20sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lvProfileInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/line" />

</LinearLayout>